// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active ticket form renders the expected components 1`] = `
<div>
  <div>
    <form
      class="form "
      novalidate=""
    >
      <div
        class="container flexContainer desktop containerDesktop"
        data-testid="scroll-container"
        style="height: 550px;"
      >
        <header
          class="header userHeader"
          data-testid="scroll-container-header"
        >
          <h1
            class="title"
          >
            message
          </h1>
        </header>
        <div
          class="content container ticketFormContainer"
          data-testid="scroll-container-content"
        >
          <div>
            <div
              class="formWrapper"
            >
              <h2
                class="ticketFormTitle "
              >
                Ticket Forms
              </h2>
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-18--input"
                id="garden-field-container-18--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-18--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-18--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="name-field"
                id="garden-field-container-18--input"
                name="name"
                value=""
              />
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-19--input"
                id="garden-field-container-19--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-describedby="garden-field-container-19--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-19--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="email-field"
                id="garden-field-container-19--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
              <div
                class=""
                data-testid="slide-appear-container"
                role="presentation"
                style="opacity: 1; bottom: 10px;"
              >
                <label
                  class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
                  for="garden-field-container-20--input"
                  id="garden-field-container-20--label"
                >
                  <strong>
                    Description
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="garden-field-container-20--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-20--label"
                  aria-required="false"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  id="garden-field-container-20--input"
                  label="Description"
                  name="1"
                  value=""
                />
              </div>
              <div
                class=""
                data-testid="slide-appear-container"
                role="presentation"
                style="opacity: 1; bottom: 10px;"
              >
                <label
                  class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
                  for="garden-field-container-21--input"
                  id="garden-field-container-21--label"
                >
                  <strong>
                    Subject
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="garden-field-container-21--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-21--label"
                  aria-required="false"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  id="garden-field-container-21--input"
                  label="Subject"
                  name="2"
                  value=""
                />
              </div>
              <div
                class=""
                data-testid="slide-appear-container"
                role="presentation"
                style="opacity: 1; bottom: 10px;"
              >
                <label
                  class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
                  for="garden-field-container-22--input"
                  id="garden-field-container-22--label"
                >
                  <strong>
                    Favorite Pizza
                  </strong>
                </label>
                <input
                  aria-describedby="garden-field-container-22--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-22--label"
                  aria-required="true"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  id="garden-field-container-22--input"
                  label="Favorite Pizza"
                  name="5"
                  required=""
                  value=""
                />
              </div>
              <span />
            </div>
          </div>
        </div>
        <footer
          class="footer  footerShadow"
          data-testid="scroll-container-footer"
        >
          <div
            class="container buttonRight buttonGroup"
          >
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              data-testid="button-cancel"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              data-testid="button-ok"
              tabindex="0"
              type="submit"
            >
              Send
            </button>
          </div>
        </footer>
      </div>
    </form>
    <a
      class="
      logo
      formSuccess
      
      
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_zendesk.svg"
        />
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;

exports[`active ticket form renders the expected components in mobile form 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,7 +6,6 @@
      >
        <div
-         class="container flexContainer desktop containerDesktop"
+         class="container flexContainer mobile"
          data-testid="scroll-container"
-         style="height: 550px;"
        >
          <header
@@ -15,5 +14,5 @@
          >
            <h1
-             class="title"
+             class="title titleMobile"
            >
              message
@@ -21,5 +20,5 @@
          </header>
          <div
-           class="content container ticketFormContainer"
+           class="content container ticketFormContainer containerMobile contentMobile"
            data-testid="scroll-container-content"
          >
@@ -29,5 +28,5 @@
              >
                <h2
-                 class="ticketFormTitle "
+                 class="ticketFormTitle ticketFormTitleMobile"
                >
                  Ticket Forms
@@ -37,6 +36,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-38--input"
-                 id="garden-field-container-38--label"
+                 for="garden-field-container-28--input"
+                 id="garden-field-container-28--label"
                >
                  <strong>
@@ -46,12 +45,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-38--hint"
+                 aria-describedby="garden-field-container-28--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-38--label"
+                 aria-labelledby="garden-field-container-28--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  data-testid="name-field"
-                 id="garden-field-container-38--input"
+                 id="garden-field-container-28--input"
                  name="name"
                  value=""
@@ -61,6 +60,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-39--input"
-                 id="garden-field-container-39--label"
+                 for="garden-field-container-29--input"
+                 id="garden-field-container-29--label"
                >
                  <strong>
@@ -69,12 +68,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-39--hint"
+                 aria-describedby="garden-field-container-29--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-39--label"
+                 aria-labelledby="garden-field-container-29--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  data-testid="email-field"
-                 id="garden-field-container-39--input"
+                 id="garden-field-container-29--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -92,6 +91,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="6.4.4"
-                   for="garden-field-container-40--input"
-                   id="garden-field-container-40--label"
+                   for="garden-field-container-30--input"
+                   id="garden-field-container-30--label"
                  >
                    <strong>
@@ -101,12 +100,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-40--hint"
+                   aria-describedby="garden-field-container-30--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-40--label"
+                   aria-labelledby="garden-field-container-30--label"
                    aria-required="false"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="6.4.4"
-                   id="garden-field-container-40--input"
+                   id="garden-field-container-30--input"
                    label="Description"
                    name="1"
@@ -124,6 +123,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="6.4.4"
-                   for="garden-field-container-41--input"
-                   id="garden-field-container-41--label"
+                   for="garden-field-container-31--input"
+                   id="garden-field-container-31--label"
                  >
                    <strong>
@@ -133,12 +132,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-41--hint"
+                   aria-describedby="garden-field-container-31--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-41--label"
+                   aria-labelledby="garden-field-container-31--label"
                    aria-required="false"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="6.4.4"
-                   id="garden-field-container-41--input"
+                   id="garden-field-container-31--input"
                    label="Subject"
                    name="2"
@@ -156,6 +155,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="6.4.4"
-                   for="garden-field-container-42--input"
-                   id="garden-field-container-42--label"
+                   for="garden-field-container-32--input"
+                   id="garden-field-container-32--label"
                  >
                    <strong>
@@ -164,12 +163,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-42--hint"
+                   aria-describedby="garden-field-container-32--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-42--label"
+                   aria-labelledby="garden-field-container-32--label"
                    aria-required="true"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="6.4.4"
-                   id="garden-field-container-42--input"
+                   id="garden-field-container-32--input"
                    label="Favorite Pizza"
                    name="5"
@@ -188,15 +187,5 @@
            <div
              class="container buttonRight buttonGroup"
-           >
-             <button
-               class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe lcPfmb"
-               data-garden-id="buttons.button"
-               data-garden-version="6.4.4"
-               data-testid="button-cancel"
-               tabindex="0"
-               type="button"
            >
-               Cancel
-             </button>
              <button
                class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
`;

exports[`renders the expected components 1`] = `
<div>
  <div>
    <form
      class="form "
      novalidate=""
    >
      <div
        class="container flexContainer desktop containerDesktop"
        data-testid="scroll-container"
        style="height: 550px;"
      >
        <header
          class="header userHeader"
          data-testid="scroll-container-header"
        >
          <h1
            class="title"
          >
            message
          </h1>
        </header>
        <div
          class="content container"
          data-testid="scroll-container-content"
        >
          <div>
            <div
              class="formWrapper"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-0--input"
                id="garden-field-container-0--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-0--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-0--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="name-field"
                id="garden-field-container-0--input"
                name="name"
                value=""
              />
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-1--input"
                id="garden-field-container-1--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-describedby="garden-field-container-1--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-1--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="email-field"
                id="garden-field-container-1--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-2--input"
                id="garden-field-container-2--label"
              >
                <strong>
                  How can we help you?
                </strong>
              </label>
              <textarea
                aria-describedby="garden-field-container-2--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-2--label"
                class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                data-garden-id="forms.textarea"
                data-garden-version="6.4.4"
                data-testid="message-field"
                id="garden-field-container-2--input"
                name="description"
                required=""
                rows="5"
              />
              <span />
            </div>
          </div>
        </div>
        <footer
          class="footer  "
          data-testid="scroll-container-footer"
        >
          <div
            class="container buttonRight buttonGroup"
          >
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              data-testid="button-cancel"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              data-testid="button-ok"
              tabindex="0"
              type="submit"
            >
              Send
            </button>
          </div>
        </footer>
      </div>
    </form>
    <a
      class="
      logo
      formSuccess
      
      
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_zendesk.svg"
        />
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;

exports[`renders the expected components in mobile mode 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,7 +6,6 @@
      >
        <div
-         class="container flexContainer desktop containerDesktop"
+         class="container flexContainer mobile"
          data-testid="scroll-container"
-         style="height: 550px;"
        >
          <header
@@ -15,5 +14,5 @@
          >
            <h1
-             class="title"
+             class="title titleMobile"
            >
              message
@@ -21,5 +20,5 @@
          </header>
          <div
-           class="content container"
+           class="content container containerMobile contentMobile"
            data-testid="scroll-container-content"
          >
@@ -32,6 +31,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-12--input"
-                 id="garden-field-container-12--label"
+                 for="garden-field-container-6--input"
+                 id="garden-field-container-6--label"
                >
                  <strong>
@@ -41,12 +40,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-12--hint"
+                 aria-describedby="garden-field-container-6--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-12--label"
+                 aria-labelledby="garden-field-container-6--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  data-testid="name-field"
-                 id="garden-field-container-12--input"
+                 id="garden-field-container-6--input"
                  name="name"
                  value=""
@@ -56,6 +55,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-13--input"
-                 id="garden-field-container-13--label"
+                 for="garden-field-container-7--input"
+                 id="garden-field-container-7--label"
                >
                  <strong>
@@ -64,12 +63,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-13--hint"
+                 aria-describedby="garden-field-container-7--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-13--label"
+                 aria-labelledby="garden-field-container-7--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  data-testid="email-field"
-                 id="garden-field-container-13--input"
+                 id="garden-field-container-7--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -81,6 +80,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-14--input"
-                 id="garden-field-container-14--label"
+                 for="garden-field-container-8--input"
+                 id="garden-field-container-8--label"
                >
                  <strong>
@@ -89,12 +88,12 @@
                </label>
                <textarea
-                 aria-describedby="garden-field-container-14--hint"
+                 aria-describedby="garden-field-container-8--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-14--label"
+                 aria-labelledby="garden-field-container-8--label"
                  class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                  data-garden-id="forms.textarea"
                  data-garden-version="6.4.4"
                  data-testid="message-field"
-                 id="garden-field-container-14--input"
+                 id="garden-field-container-8--input"
                  name="description"
                  required=""
@@ -112,14 +111,4 @@
              class="container buttonRight buttonGroup"
            >
-             <button
-               class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe lcPfmb"
-               data-garden-id="buttons.button"
-               data-garden-version="6.4.4"
-               data-testid="button-cancel"
-               tabindex="0"
-               type="button"
-             >
-               Cancel
-             </button>
              <button
                class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
`;
